MDEV-21127 Assertion in key_text::key_text()

Unsigned type while RHS expression could be less than 0.